Fixed size of map and "Spend 1 material to..." on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -21,6 +21,10 @@
         height: auto;
     }
     
+    #InProgressCampaign .map-column {
+        width: 100%;
+    }
+    
     #InProgressCampaign .ui-tabs {
         overflow: visible;
         width: 100%;
